force-app/main/default/objects/Account/fields/Account_For_TimeMeasurement__c.field-meta.xml
<CustomField>
    <fullName>Account_For_TimeMeasurement__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account For TimeMeasurement</label>
    <type>Text</type>
</CustomField>