force-app/main/default/objects/Account/fields/Account_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Account_Grouping__c</fullName>
    <label>Account Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>לקוחות האודן</fullName>
            </value>
            <value>
                <fullName>בר- זיו רביד</fullName>
            </value>
            <value>
                <fullName>לקוחות סוכנים</fullName>
            </value>
            <value>
                <fullName>מ.י.ישראלית</fullName>
            </value>
            <value>
                <fullName>ארגון מהנדסים ואדריכלים</fullName>
            </value>
            <value>
                <fullName>מ.מ.י יועצים בעמ</fullName>
                <label>מ.מ.י יועצים בע&quot;מ</label>
            </value>
            <value>
                <fullName>ניליביט</fullName>
            </value>
            <value>
                <fullName>ארגון מהנדסים ואדריכלים – ניליביט</fullName>
            </value>
            <value>
                <fullName>אלדן בר זיו רביד</fullName>
            </value>
            <value>
                <fullName>רשף לזרוביץ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>