force-app/main/default/objects/Account/fields/Account_name_in_London__c.field-meta.xml
<CustomField>
    <fullName>Account_name_in_London__c</fullName>
    <label>Account name in London</label>
    <length>255</length>
    <type>Text</type>
</CustomField>