force-app/main/default/objects/Account/fields/Active_Insurance_Types__c.field-meta.xml
<CustomField>
    <fullName>Active_Insurance_Types__c</fullName>
    <label>Insurance Types in Account</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directors</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Medical Research</fullName>
            </value>
            <value>
                <fullName>Car Fleet</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Constructors</fullName>
            </value>
            <value>
                <fullName>War and Terror</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Other Insurance Products</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>PL CGL</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>