force-app/main/default/objects/Account/fields/Activitydescription__c.field-meta.xml
<CustomField>
    <fullName>Activitydescription__c</fullName>
    <label>תיאור פעילות מקוצר</label>
    <type>TextArea</type>
</CustomField>