force-app/main/default/objects/Account/fields/AgentWise_IL__Billing_Entrance_Number__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Billing_Entrance_Number__c</fullName>
    <label>Billing Entrance Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>