force-app/main/default/objects/Account/fields/AgentWise_IL__Billing_P_O_B__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Billing_P_O_B__c</fullName>
    <label>Billing P.O.B</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>