force-app/main/default/objects/Account/fields/AgentWise_IL__Business_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Business_Effective_Date__c</fullName>
    <description>The date of registration</description>
    <label>Business Effective Date</label>
    <type>Date</type>
</CustomField>