force-app/main/default/objects/Account/fields/AgentWise_IL__DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__DUNS_Number__c</fullName>
    <externalId>true</externalId>
    <label>DUNS Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>