force-app/main/default/objects/Account/fields/AgentWise_IL__Email__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Email__c</fullName>
    <label>דואר אלקטרוני</label>
    <type>Email</type>
</CustomField>