force-app/main/default/objects/Account/fields/AgentWise_IL__Has_Opted_Out_Of_Email__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Has_Opted_Out_Of_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Opted Out Of Email</label>
    <type>Checkbox</type>
</CustomField>