force-app/main/default/objects/Account/fields/AgentWise_IL__List_Insurance_Companies__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__List_Insurance_Companies__c</fullName>
    <label>רשימת חברות ביטוח</label>
    <length>255</length>
    <type>Text</type>
</CustomField>