force-app/main/default/objects/Account/fields/AgentWise_IL__List_Investment_Comp__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__List_Investment_Comp__c</fullName>
    <label>רשימת בתי השקעות</label>
    <type>TextArea</type>
</CustomField>