force-app/main/default/objects/Account/fields/AgentWise_IL__List_Logo__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__List_Logo__c</fullName>
    <formula>IF(AgentWise_IL__Picture_Id__c != null,IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp;   AgentWise_IL__Picture_Id__c ,&quot;&quot;,50,120),HYPERLINK(&quot;/apex/&quot; &amp;$Label.AgentWise_IL__PackagePrefix &amp; &quot;UploadPicture?id=&quot; &amp; Id &amp; &quot;&amp;objectType=account&quot;,&quot;Upload Logo&quot;,&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>