force-app/main/default/objects/Account/fields/AgentWise_IL__List_Pension_Funds__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__List_Pension_Funds__c</fullName>
    <label>רשימת קרנות פנסיה</label>
    <type>TextArea</type>
</CustomField>