force-app/main/default/objects/Account/fields/AgentWise_IL__Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>