force-app/main/default/objects/Account/fields/AgentWise_IL__Number_Of_Children__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Number_Of_Children__c</fullName>
    <label>Number Of Children</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>