force-app/main/default/objects/Account/fields/AgentWise_IL__Processing_Level__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Processing_Level__c</fullName>
    <label>Processing Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>