force-app/main/default/objects/Account/fields/AgentWise_IL__Shipping_Apartment_Number__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Shipping_Apartment_Number__c</fullName>
    <label>Shipping Apartment Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>