force-app/main/default/objects/Account/fields/AgentWise_IL__Shipping_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Shipping_Building_Number__c</fullName>
    <label>Shipping Building Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>