force-app/main/default/objects/Account/fields/AgentWise_IL__Source_Lead__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Source_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to document the lead that created the account by its conversion</description>
    <label>Source Lead</label>
    <referenceTo>AgentWise_IL__Lead__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>