force-app/main/default/objects/Account/fields/AgentWise_IL__Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>AgentWise_IL__Tax_ID__c</fullName>
    <description>EID = Employer ID Number.</description>
    <inlineHelpText>Employer ID Number.</inlineHelpText>
    <label>Tax ID</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>