force-app/main/default/objects/Account/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added by Raniz 23/6/13 according to LiatE request, to document something similar to the agreement field on the policy object. Should be maintained by Howden People</description>
    <label>Agreement</label>
    <referenceTo>Novidea_HPC__Agreement__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>