force-app/main/default/objects/Account/fields/Annualrevenue__c.field-meta.xml
<CustomField>
    <fullName>Annualrevenue__c</fullName>
    <label>הכנסה שנתית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>