force-app/main/default/objects/Account/fields/BRZ__c.field-meta.xml
<CustomField>
    <fullName>BRZ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>דגל לרשומות חשבון של בר זיו רביד</description>
    <inlineHelpText>דגל לרשומות חשבון של סוכנות בר זיו רביד</inlineHelpText>
    <label>BRZ</label>
    <type>Checkbox</type>
</CustomField>