force-app/main/default/objects/Account/fields/Carrier_account_type__c.field-meta.xml
<CustomField>
    <fullName>Carrier_account_type__c</fullName>
    <label>Carrier_account_type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>