force-app/main/default/objects/Account/fields/Check_nilibit_accounts__c.field-meta.xml
<CustomField>
    <fullName>Check_nilibit_accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>בקרה ניליביט</label>
    <type>Checkbox</type>
</CustomField>