force-app/main/default/objects/Account/fields/Claims_time_measurement_report__c.field-meta.xml
<CustomField>
    <fullName>Claims_time_measurement_report__c</fullName>
    <formula>HYPERLINK(&quot;/00OD0000007ZZns?pv1=&quot;&amp;Name, &quot;דוח מדידת זמנים בתביעות סיכונים&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>דוח מדידת זמנים בתביעות סיכונים</label>
    <type>Text</type>
</CustomField>