force-app/main/default/objects/Account/fields/Client_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Client_Number_Prefix__c</fullName>
    <description>meant to keep a prefix that will be added to the codes of this agency upon import of legacy data.
should be 1 for P&amp;C
and 2 for Risk</description>
    <label>Client Number Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>