force-app/main/default/objects/Account/fields/Clientick__c.field-meta.xml
<CustomField>
    <fullName>Clientick__c</fullName>
    <defaultValue>false</defaultValue>
    <label>סימון לקוח</label>
    <type>Checkbox</type>
</CustomField>