force-app/main/default/objects/Account/fields/counsellor__c.field-meta.xml
<CustomField>
    <fullName>counsellor__c</fullName>
    <label>יועץ בתיק</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FRC – רועי פרידמן ניהול סיכונים</fullName>
            </value>
            <value>
                <fullName>אאון</fullName>
            </value>
            <value>
                <fullName>אברי ורדי, פרידמן ניהול סיכונים</fullName>
            </value>
            <value>
                <fullName>אדר סקופ</fullName>
            </value>
            <value>
                <fullName>אורי אורלנד משרד יועצים לניהול סיכונים</fullName>
            </value>
            <value>
                <fullName>אייקי שוורץ</fullName>
            </value>
            <value>
                <fullName>אילן מיכאליס</fullName>
            </value>
            <value>
                <fullName>איציק בידרמן</fullName>
            </value>
            <value>
                <fullName>אלי אליאס</fullName>
            </value>
            <value>
                <fullName>ארז קדם</fullName>
            </value>
            <value>
                <fullName>בועז ליטאי ושות&apos; ניהול סיכונים</fullName>
            </value>
            <value>
                <fullName>בקשי יפת</fullName>
            </value>
            <value>
                <fullName>ברוך ודקל בראון</fullName>
            </value>
            <value>
                <fullName>בר זיו רביד</fullName>
            </value>
            <value>
                <fullName>גבי סכנין</fullName>
            </value>
            <value>
                <fullName>גדעון ארמן</fullName>
            </value>
            <value>
                <fullName>גורדון אור</fullName>
            </value>
            <value>
                <fullName>גיל סמסונוב</fullName>
            </value>
            <value>
                <fullName>גילת בראון</fullName>
            </value>
            <value>
                <fullName>דבש נובה (נזי)</fullName>
            </value>
            <value>
                <fullName>דוד גוברין</fullName>
            </value>
            <value>
                <fullName>דודי זלמנוביץ</fullName>
            </value>
            <value>
                <fullName>דורון פרמדר</fullName>
            </value>
            <value>
                <fullName>דותן לופט, עו&quot;ד</fullName>
            </value>
            <value>
                <fullName>דניס מאיר ניהול סיכונים</fullName>
            </value>
            <value>
                <fullName>דנתן – תומס שפיס</fullName>
            </value>
            <value>
                <fullName>דקל בראון</fullName>
            </value>
            <value>
                <fullName>חזקי פרידמן</fullName>
            </value>
            <value>
                <fullName>חיים-לוי</fullName>
                <label>חיים לוי</label>
            </value>
            <value>
                <fullName>טמיר עמיקם עו&quot;ד</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>