force-app/main/default/objects/Account/fields/Created_By_Product_Flow__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Product_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Product Flow</label>
    <type>Checkbox</type>
</CustomField>