force-app/main/default/objects/Account/fields/Cust_Overview__Carrier_Alias__c.field-meta.xml
<CustomField>
    <fullName>Cust_Overview__Carrier_Alias__c</fullName>
    <description>this alias will appear on customer overview as the carrier name</description>
    <inlineHelpText>this alias will appear on customer overview as the carrier name</inlineHelpText>
    <label>Carrier Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>