force-app/main/default/objects/Account/fields/Cust_Overview__Household_main_insured_SSN__c.field-meta.xml
<CustomField>
    <fullName>Cust_Overview__Household_main_insured_SSN__c</fullName>
    <label>Household main insured SSN</label>
    <length>16</length>
    <type>Text</type>
</CustomField>