force-app/main/default/objects/Account/fields/Customer_certificate__c.field-meta.xml
<CustomField>
    <fullName>Customer_certificate__c</fullName>
    <description>אישור לקוח לשליחת חשבונית דיגיטלית</description>
    <label>אישור לקוח לשליחת חשבונית דיגיטלית</label>
    <type>Date</type>
</CustomField>