force-app/main/default/objects/Account/fields/Customer_finance__c.field-meta.xml
<CustomField>
    <fullName>Customer_finance__c</fullName>
    <label>אפיון לקוח - כספים</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TIER 1</fullName>
            </value>
            <value>
                <fullName>TIER 2</fullName>
            </value>
            <value>
                <fullName>TIER 3</fullName>
            </value>
            <value>
                <fullName>TIER 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>