force-app/main/default/objects/Account/fields/customer_refuses_to_sign_digital_invoice__c.field-meta.xml
<CustomField>
    <fullName>customer_refuses_to_sign_digital_invoice__c</fullName>
    <label>לקוח מסרב לחתום על טופס חשבונית דיגיטלית</label>
    <type>Date</type>
</CustomField>