force-app/main/default/objects/Account/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <label>Customer type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>TLV</fullName>
            </value>
            <value>
                <fullName>UCOMPARE</fullName>
            </value>
            <value>
                <fullName>V.I.P</fullName>
            </value>
            <value>
                <fullName>אורית אור</fullName>
            </value>
            <value>
                <fullName>חברים/משפחה -משה</fullName>
            </value>
            <value>
                <fullName>חברים/משפחה -צחי</fullName>
            </value>
            <value>
                <fullName>חד קרן</fullName>
            </value>
            <value>
                <fullName>טבע-VIP</fullName>
            </value>
            <value>
                <fullName>טיפול משפטי</fullName>
            </value>
            <value>
                <fullName>לא לחדש הפוליסה</fullName>
            </value>
            <value>
                <fullName>לא פעילים</fullName>
            </value>
            <value>
                <fullName>מבצע מבוטחי שפי</fullName>
            </value>
            <value>
                <fullName>משרדי עו&quot;ד</fullName>
            </value>
            <value>
                <fullName>ספורט</fullName>
            </value>
            <value>
                <fullName>עובדי המשרד ומשפחתם</fullName>
            </value>
            <value>
                <fullName>קשיי גביה</fullName>
            </value>
            <value>
                <fullName>רגיל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>