force-app/main/default/objects/Account/fields/Customers_under_supervision__c.field-meta.xml
<CustomField>
    <fullName>Customers_under_supervision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>לקוחות בהשגחה</label>
    <type>Checkbox</type>
</CustomField>