force-app/main/default/objects/Account/fields/Cyber_Collective__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Collective__c</fullName>
    <label>Cyber Collective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חתם מלא והשיב בחיוב על שאלון סייבר קולקטיב שפי - בכיסוי</fullName>
            </value>
            <value>
                <fullName>חתם חלקית והשיב בשלילה על השאלון - אין כיסוי</fullName>
            </value>
            <value>
                <fullName>לא חתם - אין כיסוי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>