force-app/main/default/objects/Account/fields/Cyber_Icon__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Icon__c</fullName>
    <formula>IF( Has_Cyber__c ,  IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000Cgy7K&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSZMj&quot;, &quot;has cyber&quot;, $Setup.IconSize__c.small__c, $Setup.IconSize__c.small__c),IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000CgyKG&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSZNX&quot;,&quot;Does not have Cyber&quot;, $Setup.IconSize__c.small__c, $Setup.IconSize__c.small__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cyber</label>
    <type>Text</type>
</CustomField>