force-app/main/default/objects/Account/fields/CyberSurveyYear__c.field-meta.xml
<CustomField>
    <fullName>CyberSurveyYear__c</fullName>
    <label>שנת חתימה לשאלון סייבר קולקטיב</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>