force-app/main/default/objects/Account/fields/D_Attachment__c.field-meta.xml
<CustomField>
    <fullName>D_Attachment__c</fullName>
    <label>סטטוס חתימת נספח ד&apos;</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חתם באמצעות האודן שפי</fullName>
            </value>
            <value>
                <fullName>חתם באמצעות ארגון המהנדסים</fullName>
            </value>
            <value>
                <fullName>חתם חלקית בהאודן שפי - הועבר לארגון המהנדסים</fullName>
            </value>
            <value>
                <fullName>חתם חלקית בארגון המהנדסים</fullName>
            </value>
            <value>
                <fullName>לא חתם בהאודן שפי - הועבר לארגון המהנדסים</fullName>
            </value>
            <value>
                <fullName>לא חתם</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>