force-app/main/default/objects/Account/fields/D_Attachment_Date__c.field-meta.xml
<CustomField>
    <fullName>D_Attachment_Date__c</fullName>
    <label>תאריך חתימת נספח ד&apos;</label>
    <type>Date</type>
</CustomField>