force-app/main/default/objects/Account/fields/DandO_Icon__c.field-meta.xml
<CustomField>
    <fullName>DandO_Icon__c</fullName>
    <formula>IF( Has_Directors__c  , IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000CgyKF&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSZN3&quot;, &quot;has D&amp;O&quot; , $Setup.IconSize__c.small__c ,$Setup.IconSize__c.small__c),IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000CgyQA&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSZNm&quot;,&quot;Does not have D&amp;O&quot; ,$Setup.IconSize__c.small__c,$Setup.IconSize__c.small__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D&amp;O</label>
    <type>Text</type>
</CustomField>